# ontograph-private

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AGENTS.md  GEMINI.md  LEAN-CTX.md  MODULE.bazel  README.md  clean.sh  defs.bzl  fix.py  fix_file.py  fix_file_2.py  fix_test.py  fix_type.py  flake.nix  gemini_tools.md  generate_tools_md.sh  justfile  multi_agents.patch  multi_agents_fix.patch  openclaw_tools.md  opencode_tools.md  package.json  patch.diff  patch.py  patch_adr.py  patch_agent_job.sh  patch_agent_jobs_get_queries.sh  patch_agent_jobs_get_queries_fix.sh  patch_agent_jobs_queries.sh  patch_all.py  patch_core.py  patch_handlers_agent_jobs.py  patch_mark_completed.sh  patch_mark_completed_2.sh  patch_mark_completed_3.sh  patch_mark_completed_fix.sh  patch_protocol.py  (+17 more)
cognitx_codegraph-0.1.118/: README.md  pyproject.toml
cognitx_codegraph-0.1.118/codegraph/: __init__.py  analyze.py  arch_check.py  arch_config.py  audit.py  audit_agents.py  audit_prompt_lint.py  benchmark.py  cache.py  cli.py  clone.py  config.py  doc_parser.py  docker_setup.py  export.py  framework.py  hooks.py  ignore.py  init.py  loader.py  mcp.py  ownership.py  parse_validator.py  parser.py  platforms.py  py_parser.py  repl.py  report.py  resolver.py  schema.py  semantic_extract.py  session.py  transcribe.py  validate.py  vision_extract.py  watch.py
cognitx_codegraph-0.1.118/codegraph/templates/: arch-policies.toml  claude-md-snippet.md  codegraph.toml  docker-compose.yml
cognitx_codegraph-0.1.118/codegraph/utils/: neo4j_json.py  repl_skin.py
cognitx_codegraph-0.1.118/cognitx_codegraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cognitx_codegraph-0.1.118/tests/: test_analyze.py  test_arch_check.py  test_arch_config.py  test_audit.py  test_audit_prompt_lint.py  test_benchmark.py  test_cache.py  test_cli_neo4j_errors.py  test_clone.py  test_confidence.py  test_doc_parser.py  test_doc_parser_markdown.py  test_docker_setup.py  test_edgegroup.py  test_export.py  test_framework.py  test_hooks.py  test_ignore.py  test_incremental.py  test_init.py  test_init_integration.py  test_init_shared.py  test_loader_pairing.py  test_loader_partitioning.py  test_mcp.py  test_ownership.py  test_parse_validator.py  test_platforms.py  test_py_framework.py  test_py_parser.py  test_py_parser_calls.py  test_py_parser_endpoints.py  test_py_resolver.py  test_repo_namespace.py  test_resolver_bugs.py  test_schema.py  test_semantic_extract.py  test_stats.py  test_template_sync.py  test_transcribe.py  (+3 more)
ontocode-rs/adapter-protocol/: Cargo.toml
ontocode-rs/adapter-protocol/src/: conformance.rs  lib.rs
ontocode-rs/agent-graph-store/: BUILD.bazel  Cargo.toml
ontocode-rs/agent-graph-store/src/: local.rs  store.rs
ontocode-rs/analytics/: BUILD.bazel  Cargo.toml
ontocode-rs/analytics/src/: accepted_lines.rs  analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
ontocode-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
ontocode-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
ontocode-rs/app-server-client/src/: lib.rs  remote.rs
ontocode-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
ontocode-rs/app-server-test-client/src/: lib.rs  main.rs
ontocode-rs/app-server-transport/: BUILD.bazel  Cargo.toml
ontocode-rs/app-server-transport/src/: outgoing_message.rs
ontocode-rs/app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  dynamic_tools.rs  error_code.rs  extensions.rs  filters.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
ontocode-rs/apply-patch/: BUILD.bazel  Cargo.toml
ontocode-rs/apply-patch/src/: invocation.rs  lib.rs  main.rs  parser.rs  standalone_executable.rs
ontocode-rs/arg0/: BUILD.bazel  Cargo.toml
ontocode-rs/arg0/src/: lib.rs
ontocode-rs/backend-client/: BUILD.bazel  Cargo.toml
ontocode-rs/backend-client/src/: client.rs  types.rs
ontocode-rs/chatgpt/: BUILD.bazel  Cargo.toml
ontocode-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  connectors.rs  get_task.rs  workspace_settings.rs
ontocode-rs/cli/: BUILD.bazel  Cargo.toml
ontocode-rs/cli/src/: debug_sandbox.rs  doctor.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  remote_control_cmd.rs  sandbox_setup.rs  state_db_recovery.rs  wsl_paths.rs
ontocode-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  exec_server.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  ontocode_alias.rs  plugin_cli.rs  update.rs
ontocode-rs/cloud-config/: BUILD.bazel  Cargo.toml
ontocode-rs/cloud-config/src/: backend.rs  bundle_loader.rs  cache.rs  cache_tests.rs  metrics.rs  service.rs  service_tests.rs  validation.rs
ontocode-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
ontocode-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
ontocode-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
ontocode-rs/cloud-tasks/src/: app.rs  (+6 more)
ontocode-rs/codex-mcp/: BUILD.bazel  Cargo.toml
ontocode-rs/config/: BUILD.bazel  Cargo.toml
ontocode-rs/context-fragments/: BUILD.bazel  Cargo.toml
ontocode-rs/core/: BUILD.bazel  Cargo.toml  config.schema.json
ontocode-rs/core-api/: BUILD.bazel  Cargo.toml
ontocode-rs/core-plugins/: BUILD.bazel  Cargo.toml
ontocode-rs/core-skills/: BUILD.bazel  Cargo.toml
ontocode-rs/exec/: BUILD.bazel  Cargo.toml
ontocode-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
ontocode-rs/external-agent-migration/: BUILD.bazel  Cargo.toml
ontocode-rs/external-agent-sessions/: BUILD.bazel  Cargo.toml
ontocode-rs/features/: BUILD.bazel  Cargo.toml
(+3174 files in other folders)
