[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitx-codegraph"
version = "0.1.118"
description = "Code knowledge graph for Claude Code & AI coding agents — index TypeScript, Python, NestJS, FastAPI, React into Neo4j and query architecture in Cypher. Note: v0.2.0 is deprecated, use 0.1.x."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Leyton CognitX", email = "cognitx@leyton.com" },
]
keywords = [
  "code-knowledge-graph",
  "graphrag",
  "neo4j",
  "typescript",
  "nestjs",
  "react",
  "claude-code",
  "ai-agents",
  "mcp",
  "static-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "tree-sitter>=0.23,<0.25",
  "tree-sitter-typescript>=0.23",
  "neo4j>=5.28,<6",
  "typer>=0.15",
  "rich>=13",
  "pyyaml>=6",
  "tomli>=2.0; python_version<\"3.11\"",
]

[project.optional-dependencies]
repl = [
  # Enables history, editing, and tab-completion in the interactive REPL.
  # The REPL works without it (falls back to plain input()), but it's much
  # nicer with prompt_toolkit installed.
  "prompt_toolkit>=3.0",
]
mcp = [
  # Stdio MCP server at codegraph.mcp:main — exposes the graph to Claude
  # Code and other MCP-aware agents as typed tool calls.
  "mcp>=1.0",
]
python = [
  # tree-sitter-python grammar. Enables codegraph to index Python codebases
  # alongside TypeScript. Optional because the TS-only use case is still
  # the primary one; install with `pip install "codegraph[python]"` or the
  # `all` extra to enable the Python frontend.
  "tree-sitter-python>=0.23,<0.25",
]
watch = [
  # File-system watcher for auto graph rebuild on save.
  # Optional because the hook-based workflow (post-commit) works without it.
  "watchdog>=4.0",
]
benchmark = [
  # Precise BPE token counting. Without this, benchmark uses chars/4
  # approximation which is sufficient for relative comparisons.
  "tiktoken>=0.7",
]
analyze = [
  # Leiden community detection + GRAPH_REPORT.md generation.
  # graspologic provides the Leiden algorithm; networkx is the fallback
  # (Louvain) and the in-memory graph representation for analysis.
  "networkx>=3.0",
  "graspologic>=3.4; python_version < '3.13'",
]
docs = [
  # PDF and document text extraction for --extract-docs.
  # pypdf is pure-Python with no system dependencies.
  "pypdf>=4.0",
]
semantic = [
  # Claude API for semantic extraction of concepts/decisions from markdown.
  # Required by --extract-markdown on `codegraph index`.
  "anthropic>=0.40",
]
transcribe = [
  # Whisper-based audio/video transcription for --extract-audio.
  # faster-whisper uses CTranslate2 for fast CPU/GPU inference.
  # yt-dlp downloads audio from YouTube and similar sites.
  "faster-whisper>=1.0",
  "yt-dlp>=2024.1",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # Required by tests/test_watch.py — the watch tests import watchdog directly.
  "watchdog>=4.0",
  # Required by tests/test_doc_parser.py — PDF extraction tests.
  "pypdf>=4.0",
  # Required by tests/test_semantic_extract.py — semantic extraction tests.
  "anthropic>=0.40",
  # Required by tests/test_transcribe.py — Whisper transcription tests.
  "faster-whisper>=1.0",
]

[project.scripts]
# Puts `codegraph` on PATH after `pip install -e .` / `pip install codegraph`.
codegraph = "codegraph.cli:app"
# Stdio MCP server; install the [mcp] extra for this to work.
codegraph-mcp = "codegraph.mcp:main"

[project.urls]
Homepage      = "https://cognitx.leyton.com/"
Repository    = "https://github.com/cognitx-leyton/graphrag-code"
Documentation = "https://github.com/cognitx-leyton/graphrag-code#readme"
Issues        = "https://github.com/cognitx-leyton/graphrag-code/issues"

[tool.codegraph]
packages = ["codegraph", "tests"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["codegraph*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that spin up external services (Docker, Neo4j). Deselected by default.",
]
# Deselect slow tests by default — run them explicitly with `-m slow`.
addopts = "-m 'not slow'"

[tool.setuptools.package-data]
# Ship the init scaffolder's templates with the wheel. Without this line,
# `codegraph init` can't find its own templates after `pip install`.
codegraph = [
    "templates/**/*.md",
    "templates/**/*.mdc",
    "templates/**/*.yml",
    "templates/**/*.toml",
    "templates/**/*.js",
    # The audit prompt integrity lock file. Hidden filename (no glob match
    # via `*.lock`), so listed explicitly.
    "templates/audit/.lock",
]
