[package]
edition.workspace = true
license.workspace = true
name = "ontocode-adapter-protocol"
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
