[package]
edition.workspace = true
license.workspace = true
name = "ontocode-analytics"
version.workspace = true

[lib]
doctest = false
name = "ontocode_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ontocode-app-server-protocol = { workspace = true }
ontocode-git-utils = { workspace = true }
ontocode-login = { workspace = true }
ontocode-model-provider = { workspace = true }
ontocode-plugin = { workspace = true }
ontocode-protocol = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
ontocode-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
