[package]
name = "ontocode-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ontocode_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
ontocode-app-server = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-arg0 = { workspace = true }
ontocode-config = { workspace = true }
ontocode-core = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-feedback = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-uds = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
