[package]
name = "ontocode-app-server-test-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ontocode-app-server-protocol = { workspace = true }
ontocode-core = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lib]
test = false
doctest = false
