[package]
name = "ontocode-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ontocode-app-server"
path = "src/main.rs"

[[bin]]
name = "ontocode-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "ontocode_app_server"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
ontocode-analytics = { workspace = true }
ontocode-arg0 = { workspace = true }
ontocode-cloud-config = { workspace = true }
ontocode-config = { workspace = true }
ontocode-core = { workspace = true }
ontocode-core-plugins = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-extension-api = { workspace = true }
ontocode-external-agent-migration = { workspace = true }
ontocode-external-agent-sessions = { workspace = true }
ontocode-features = { workspace = true }
ontocode-guardian = { workspace = true }
ontocode-git-utils = { workspace = true }
ontocode-file-watcher = { workspace = true }
ontocode-hooks = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-plugin = { workspace = true }
ontocode-shell-command = { workspace = true }
ontocode-utils-cli = { workspace = true }
ontocode-utils-pty = { workspace = true }
ontocode-backend-client = { workspace = true }
ontocode-file-search = { workspace = true }
ontocode-chatgpt = { workspace = true }
ontocode-login = { workspace = true }
ontocode-image-generation-extension = { workspace = true }
ontocode-memories-extension = { workspace = true }
ontocode-web-search-extension = { workspace = true }
ontocode-memories-write = { workspace = true }
ontocode-mcp = { workspace = true }
ontocode-model-provider = { workspace = true }
ontocode-models-manager = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-app-server-transport = { workspace = true }
ontocode-feedback = { workspace = true }
ontocode-rmcp-client = { workspace = true }
ontocode-rollout = { workspace = true }
ontocode-sandboxing = { workspace = true }
ontocode-state = { workspace = true }
ontocode-thread-store = { workspace = true }
ontocode-tools = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[target.'cfg(windows)'.dependencies]
ontocode-windows-sandbox = { workspace = true }

[dev-dependencies]
app_test_support = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
base64 = { workspace = true }
ontocode-model-provider-info = { workspace = true }
ontocode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
flate2 = { workspace = true }
hmac = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
tar = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
