[package]
name = "ontocode-apply-patch"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ontocode_apply_patch"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "apply_patch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
ontocode-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
