
[package]
edition.workspace = true
license.workspace = true
name = "ontocode-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "ontocode_cloud_tasks_mock_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
ontocode-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
