[package]
edition.workspace = true
license.workspace = true
name = "ontocode-mcp"
version.workspace = true

[lib]
name = "ontocode_mcp"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
ontocode-async-utils = { workspace = true }
ontocode-api = { workspace = true }
ontocode-config = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-login = { workspace = true }
ontocode-model-provider = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-plugin = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-rmcp-client = { workspace = true }
ontocode-utils-plugins = { workspace = true }
futures = { workspace = true }
regex-lite = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
tempfile = { workspace = true }
