[package]
edition.workspace = true
license.workspace = true
name = "ontocode-context-fragments"
version.workspace = true

[lib]
name = "ontocode_context_fragments"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
ontocode-protocol = { workspace = true }
ontocode-utils-string = { workspace = true }
