[package]
edition.workspace = true
license.workspace = true
name = "ontocode-core-plugins"
version.workspace = true

[lib]
doctest = false
name = "ontocode_core_plugins"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ontocode-analytics = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-config = { workspace = true }
ontocode-core-skills = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-git-utils = { workspace = true }
ontocode-hooks = { workspace = true }
ontocode-login = { workspace = true }
ontocode-model-provider = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-plugin = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-plugins = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
