[package]
edition.workspace = true
license.workspace = true
name = "ontocode-core-skills"
version.workspace = true

[lib]
doctest = false
name = "ontocode_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ontocode-analytics = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-config = { workspace = true }
ontocode-context-fragments = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-login = { workspace = true }
ontocode-model-provider = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-skills = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-output-truncation = { workspace = true }
ontocode-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
