[package]
edition.workspace = true
license.workspace = true
name = "ontocode-core"
version.workspace = true

[lib]
name = "ontocode_core"
path = "src/lib.rs"

[[bin]]
name = "ontocode-write-config-schema"
path = "src/bin/config_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
ontocode-analytics = { workspace = true }
ontocode-api = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-apply-patch = { workspace = true }
ontocode-async-utils = { workspace = true }
ontocode-code-mode = { workspace = true }
ontocode-connectors = { workspace = true }
ontocode-context-fragments = { workspace = true }
ontocode-config = { workspace = true }
ontocode-core-plugins = { workspace = true }
ontocode-core-skills = { workspace = true }
ontocode-exec-server = { workspace = true }
ontocode-extension-api = { workspace = true }
ontocode-features = { workspace = true }
ontocode-feedback = { workspace = true }
ontocode-login = { workspace = true }
ontocode-memories-read = { workspace = true }
ontocode-mcp = { workspace = true }
ontocode-model-provider-info = { workspace = true }
ontocode-models-manager = { workspace = true }
ontocode-shell-command = { workspace = true }
ontocode-execpolicy = { workspace = true }
ontocode-git-utils = { workspace = true }
ontocode-hooks = { workspace = true }
ontocode-install-context = { workspace = true }
ontocode-network-proxy = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-plugin = { workspace = true }
ontocode-model-provider = { workspace = true }
ontocode-provider-auth = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-response-debug-context = { workspace = true }
ontocode-prompts = { workspace = true }
ontocode-rollout = { workspace = true }
ontocode-rollout-trace = { workspace = true }
ontocode-rmcp-client = { workspace = true }
ontocode-sandboxing = { workspace = true }
ontocode-state = { workspace = true }
ontocode-terminal-detection = { workspace = true }
ontocode-thread-store = { workspace = true }
ontocode-tools = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-cache = { workspace = true }
ontocode-utils-image = { workspace = true }
ontocode-utils-home-dir = { workspace = true }
ontocode-utils-output-truncation = { workspace = true }
ontocode-utils-path = { workspace = true }
ontocode-utils-plugins = { workspace = true }
ontocode-utils-pty = { workspace = true }
ontocode-utils-string = { workspace = true }
ontocode-utils-stream-parser = { workspace = true }
ontocode-windows-sandbox = { package = "ontocode-windows-sandbox", path = "../windows-sandbox-rs" }
csv = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
whoami = { workspace = true }

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
ontocode-shell-escalation = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-test-binary-support = { workspace = true }
ontocode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
opentelemetry = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
test-case = "3.3.1"
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
